--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <HTML>
 <body>
 <p>Hello World!</p>
-<a href="StevenSawyer.vcf">VCARD</a>
-<a href="stroud.jfif">PIC</a>
+<a href="/StevenSawyer.vcf">VCARD</a>
+<a href="/stroud.jfif">PIC</a>
 </HTML>
 </body>
