--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <HTML>
 <body>
 <p>Hello World!</p>
-<a href="/StevenSawyer.vcf">VCARD</a>
-<a href="/stroud.jfif">PIC</a>
-<img src="/stroud.jfif">
+<a href="StevenSawyer.vcf">VCARD</a>
+<a href="stroud.jfif">PIC</a>
+<img src="stroud.jfif">
 </HTML>
 </body>
