--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <p>Hello World!</p>
 <a href="StevenSawyer.vcf">VCARD</a>
 <a href="stroud.jfif">PIC</a>
-<img src="logo.jpg">
+<img src="logo.jpg" alt="logo">
 </HTML>
 </body>
