--- a/index.html
+++ b/index.html
@@ -65,17 +65,14 @@
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
-  <h3 class="margin">FaceBook</h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-facebook"></span> FaceBook
   </a>
-  <h3 class="margin">Instagram</h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-instagram"></span> Instagram
   </a>
-  <h3 class="margin">SawyerS website</h3>
   <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon fa fa-pagelines"></span> WEBSITE
+    <span class="fi-web"></span>OUR WEBSITE
   </a>
   <h3 class="margin">Write to us</h3>
   <a href="#" class="btn btn-default btn-lg">
