--- a/index.html
+++ b/index.html
@@ -23,6 +23,14 @@
     background-color: #1abc9c; /* Green */
     color: #ffffff;
   }
+   .bg-2 { 
+    background-color: #474e5d; /* Dark Blue */
+    color: #ffffff;
+  }
+  .bg-3 { 
+    background-color: #ffffff; /* White */
+    color: #555555;
+  }
   .bg-4 { 
     background-color: #2f2f2f; /* Black Gray */
     color: #fff;
@@ -64,11 +72,14 @@
     <span class="glyphicon fa fa-instagram"></span> Instagram
   </a>
   <a href="#" class="btn btn-default btn-lg">
-    <span class="fa fa-black-tie"></span>OUR WEBSITE
+    <span class="glyphicon fa fa-black-tie"></span>OUR WEBSITE
   </a>
   <h3 class="margin">Write to us</h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-telegram"></span> e-MAIL
+  </a>
+  <a href="#" class="btn btn-default btn-lg">
+    <span class="glyphicon fa fa-vcard"></span> VCARD
   </a>
 </div>
 
