--- a/index.html
+++ b/index.html
@@ -65,19 +65,23 @@
 
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
+  <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-facebook"></span> FaceBook
   </a>
+  <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-instagram"></span> Instagram
   </a>
+  <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-black-tie"></span>OUR WEBSITE
   </a>
-  <h3 class="margin">Write to us</h3>
+  <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-telegram"></span> e-MAIL
   </a>
+  <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-vcard"></span> VCARD
   </a>
