--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   </a>
   <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon fa fa-black-tie"></span>OUR WEBSITE
+    <span class="glyphicon fa fa-black-tie"></span> Our Website
   </a>
   <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
