--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     color: #ffffff;
   }
   .bg-3 { 
-    background-color: #ffffff; /* White */
+    background-color: #2f2f2f; /* Black Gray */
     color: #555555;
   }
   .bg-4 { 
