--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     font: 20px Montserrat, sans-serif;
     line-height: 1.8;
     color: #f5f6f7;
+    background-color: #474e5d; /* Dark Blue */
   }
   p {font-size: 16px;}
   .margin {margin-bottom: 45px;}
