--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin"> </h3>
+  <h3 class="margin"> </h3>
+  <h3 class="margin"> </h3>
+  <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-facebook"></span> FaceBook
   </a>
