--- a/index.html
+++ b/index.html
@@ -39,10 +39,7 @@
 </div>
 
 <!-- Second Container -->
-<div class="container-fluid bg-2 text-center">
-  <h3 class="margin"> </h3>
-  <h3 class="margin"> </h3>
-  <h3 class="margin"> </h3>
+<div class="container-fluid bg-2 text-center" padding="70px">
   <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-facebook"></span> FaceBook
