--- a/index.html
+++ b/index.html
@@ -39,12 +39,15 @@
 </div>
 
 <!-- Second Container -->
-<div class="container-fluid bg-2 text-center" padding="70px">
+<div class="container-fluid bg-2 text-center">
   <h3 class="margin"> </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-facebook"></span> FaceBook
   </a>
-  <h3 class="margin"> </h3>
+  <h3 class="margin"> 
+  
+  
+  </h3>
   <a href="#" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-instagram"></span> Instagram
   </a>
