--- a/index.html
+++ b/index.html
@@ -41,26 +41,23 @@
 <!-- Second Container -->
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin"> </h3>
-  <a href="#" class="btn btn-default btn-lg">
+  <a href="https://www.facebook.com/Sawyersestateagents/" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-facebook"></span> FaceBook
   </a>
-  <h3 class="margin"> 
-  
-  
-  </h3>
-  <a href="#" class="btn btn-default btn-lg">
+  <h3 class="margin"> </h3>
+  <a href="https://www.instagram.com/sawyersestateagents/" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-instagram"></span> Instagram
   </a>
   <h3 class="margin"> </h3>
-  <a href="#" class="btn btn-default btn-lg">
+  <a href="https://www.sawyersestateagents.co.uk/default.aspx" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-black-tie"></span> Our Website
   </a>
   <h3 class="margin"> </h3>
-  <a href="#" class="btn btn-default btn-lg">
+  <a href="mailto:info@sawyersestateagents.co.uk" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-telegram"></span> e-MAIL
   </a>
   <h3 class="margin"> </h3>
-  <a href="#" class="btn btn-default btn-lg">
+  <a href="StevenSawyer.vcf" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-vcard"></span> VCARD
   </a>
 </div>
