--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <span class="glyphicon fa fa-black-tie"></span> Our Website
   </a>
   <h3 class="margin"> </h3>
-  <a href="mailto:info@sawyersestateagents.co.uk" class="btn btn-default btn-lg">
+  <a href="mailto:clive@sawyersestateagents.co.uk" class="btn btn-default btn-lg">
     <span class="glyphicon fa fa-telegram"></span> e-MAIL
   </a>
   <h3 class="margin"> </h3>
