--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <div class="container-fluid bg-2 text-center">
   <h3 class="margin"> </h3>
   <a href="https://www.facebook.com/Sawyersestateagents/" class="btn btn-default btn-lg">
-    <span class="glyphicon fa fa-facebook"></span> FaceBook
+    <span class="glyphicon fa fa-facebook"></span> Facebook
   </a>
   <h3 class="margin"> </h3>
   <a href="https://www.instagram.com/sawyersestateagents/" class="btn btn-default btn-lg">
@@ -57,8 +57,8 @@
     <span class="glyphicon fa fa-telegram"></span> e-MAIL
   </a>
   <h3 class="margin"> </h3>
-  <a href="StevenSawyer.vcf" class="btn btn-default btn-lg">
-    <span class="glyphicon fa fa-vcard"></span> VCARD
+  <a href="SawyersVCard.vcf" class="btn btn-default btn-lg">
+    <span class="glyphicon fa fa-vcard"></span> vCARD
   </a>
 </div>
 
